Fix build.sbt