@@ -16,5 +16,4 @@ libraryDependencies ++= Seq(
 
 Test / run / fork := true
 javaOptions ++= Seq("-Xms512M", "-Xmx2048M")
-javaOptions ++= Seq("--add-exports java.base/sun.nio.ch=ALL-UNNAMED")
 
